// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-hmzhuo jNkvxk"
>
  <div
    className="sc-jnlKLf khIVJj"
  >
    <p
      className="sc-bxivhb jpexxn"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
  className="sc-jnlKLf khIVJj"
>
  <div
    className="sc-hmzhuo ciFXuf"
  >
    <p
      className="sc-bxivhb jpexxn"
    >
      This has padding.
    </p>
  </div>
</div>
`;
